<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="6"
    android:useDefaultMargins="true"
    tools:context="@string/app_name">

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:text="@string/texto_resultado_padrao"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/gasolinaTextView"
        android:layout_width="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="12dp"
        android:text="@string/texto_gasolina"
        android:textColor="@color/gasolina"
        android:textSize="18sp"
        android:typeface="sans" />

    <SeekBar
        android:id="@+id/gasolinaSeekBar"
        android:layout_height="40dp"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="20dp"
        android:max="1000"
        android:thumbTint="@color/gasolina" />

    <TextView
        android:id="@+id/etanolTextView"
        android:layout_width="wrap_content"
        android:layout_columnSpan="1"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/texto_etanol"
        android:textColor="@color/etanol"
        android:textSize="18sp"
        android:typeface="sans" />

    <SeekBar
        android:id="@+id/etanolSeekBar"
        android:layout_height="40dp"
        android:layout_columnSpan="1"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="20dp"
        android:max="1000"
        android:thumbTint="@color/etanol" />

    <ImageView
        android:id="@+id/resultadoImageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_columnSpan="1"
        android:layout_gravity="center"
        android:contentDescription="@string/descricao"
        app:srcCompat="@drawable/image" />

</GridLayout>